Pattern Observable-Stores implemented. Also added a complete abstraction of an Observable store, incluiding actions and reducers.

--- a/src/app/sample/content/content.component.html
+++ b/src/app/sample/content/content.component.html
@@ -1,3 +1,6 @@
-<p>
-  content works!
-</p>
+<ul>
+  <li *ngFor="let content of (contentStore.state$ | async).contents; index as i">
+    <p>{{ content.id }} - {{ content.description }}</p>
+  </li>
+</ul>
+<button (click)="addContent()">+</button>
